--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,9 +9,26 @@
     <string name="cancel">Cancel</string>
     <string name="retry">Retry</string>
     <string name="error">Error</string>
+    <string name="add">Add</string>
+    <string name="save">Save</string>
     <string name="unknown_error">Unknown error</string>
+    <string name="optional">Optional</string>
+    <string name="from">From</string>
+    <string name="to">To</string>
+    <string name="field_required">Field is required</string>
     <!-- Sign-in -->
     <string name="sign_in_error_description">%s\nDo you want to retry?</string>
+    <!-- Menu -->
+    <string name="settings">Settings</string>
+    <string name="my_dictionaries">My dictionaries</string>
+    <!-- Dictionary -->
+    <string name="add_dictionary">Add dictionary</string>
+    <string name="dialect">Dialect</string>
+    <string name="select_language_from">Select language from</string>
+    <string name="select_language_to">Select language to</string>
+    <!-- Language -->
+    <string name="add_language">Add language</string>
+    <string name="search_hint">English</string>
 
     <string name="menu_drawer_open">DrawerOpen</string>
     <string name="menu_drawer_closed">DrawerClosed</string>
