--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="from">From</string>
     <string name="to">To</string>
     <string name="field_required">Field is required</string>
+    <string name="undo">Undo</string>
+    <string name="seconds">seconds</string>
     <!-- Sign-in -->
     <string name="sign_in_error_description">%s\nDo you want to retry?</string>
     <!-- Menu -->
