--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,9 @@
     <string name="field_required">Field is required</string>
     <string name="undo">Undo</string>
     <string name="seconds">seconds</string>
+    <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
+    <string name="selected">Selected</string>
     <!-- Sign-in -->
     <string name="sign_in_error_description">%s\nDo you want to retry?</string>
     <!-- Menu -->
