migrated live data to kotlin flow

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,8 @@
     <string name="dialect">Dialect</string>
     <string name="select_language_from">Select language from</string>
     <string name="select_language_to">Select language to</string>
+    <string name="error_delete_dictionary">Something was wrong to delete dictionary</string>
+    <string name="error_create_dictionary">Something was wrong to create dictionary</string>
     <!-- Language -->
     <string name="add_language">Add language</string>
     <string name="search_hint">English</string>
