--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="search_hint">English</string>
     <!-- Words -->
     <string name="words">Words</string>
+    <string name="add_word">Add word</string>
     <string name="error_load_data">Something was wrong to load data</string>
     <string name="tap_your_word">Tap to add your word here</string>
     <string name="tap_to_add_phonetics">Tap to add phonetics</string>
