--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="tap_your_word">Tap to add your word here</string>
     <string name="tap_to_add_phonetics">Tap to add phonetics</string>
     <string name="translation_variants">Translation variants</string>
+    <string name="error_not_found_phonetics">Phonetic symbols don\'t find for this language</string>
 
     <string name="menu_drawer_open">DrawerOpen</string>
     <string name="menu_drawer_closed">DrawerClosed</string>
