--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,8 +42,15 @@
     <string name="error_load_data">Something was wrong to load data</string>
     <string name="tap_your_word">Tap to add your word here</string>
     <string name="tap_to_add_phonetics">Tap to add phonetics</string>
+    <string name="tap_your_translation">Tap to add your translation here</string>
+    <string name="tap_to_add_example">Tap to add example</string>
     <string name="translation_variants">Translation variants</string>
+    <string name="add_translation_variants">Add translation variants</string>
+    <string name="choose_category">Choose or add category (optional)</string>
     <string name="error_not_found_phonetics">Phonetic symbols don\'t find for this language</string>
+    <string name="add_category_name">Add category name</string>
+    <string name="error_empty_translations">You have to add at least one translation variant</string>
+    <string name="error_create_word">Something was wrong to add word</string>
 
     <string name="menu_drawer_open">DrawerOpen</string>
     <string name="menu_drawer_closed">DrawerClosed</string>
