--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,7 @@
     <string name="add_category_name">Add category name</string>
     <string name="error_empty_translations">You have to add at least one translation variant</string>
     <string name="error_create_word">Something was wrong to add word</string>
+    <string name="error_delete_word">Something was wrong to delete word</string>
 
     <string name="menu_drawer_open">DrawerOpen</string>
     <string name="menu_drawer_closed">DrawerClosed</string>
