--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,9 @@
     <string name="selected">Selected</string>
     <string name="log_out">Log out</string>
     <string name="name">Name</string>
+    <string name="next">Next</string>
+    <string name="skip">Skip</string>
+    <string name="success">Success</string>
     <!-- Sign-in -->
     <string name="sign_in_error_description">%s\nDo you want to retry?</string>
     <!-- Menu -->
@@ -45,6 +48,9 @@
     <string name="error_empty_dictionary">Please select dictionary</string>
     <string name="error_empty_words">Please choose at least one word for quiz</string>
     <string name="error_create_quiz">Something was wrong to create quiz</string>
+    <string name="translation">Translation</string>
+    <string name="error_validation">Answer is not mismatch</string>
+    <string name="fail_time_over">Failed. Time is over</string>
     <!-- Dictionary -->
     <string name="dictionary">Dictionary</string>
     <string name="add_dictionary">Add dictionary</string>
