--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,7 @@
     <string name="error_empty_dictionary">Please select dictionary</string>
     <string name="error_empty_words">Please choose at least one word for quiz</string>
     <string name="error_create_quiz">Something was wrong to create quiz</string>
+    <string name="error_save_result_quiz">Something was wrong to save quiz result</string>
     <string name="translation">Translation</string>
     <string name="error_validation">Answer is not mismatch</string>
     <string name="fail_time_over">Failed. Time is over</string>
