added ability to reverse quiz dictionary

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,6 +61,7 @@
     <string name="right_answers">Right answers: %d</string>
     <string name="add_quiz">Add quiz</string>
     <string name="edit_quiz">Edit quiz</string>
+    <string name="reverse_dictionary">Reverse dictionary</string>
     <!-- Dictionary -->
     <string name="dictionary">Dictionary</string>
     <string name="add_dictionary">Add dictionary</string>
