--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,6 +96,10 @@
     <string name="error_update_word">Something was wrong to update word</string>
     <string name="error_update_translation">Something was wrong to update translation</string>
     <string name="error_delete_word">Something was wrong to delete word</string>
+    <!-- Tags -->
+    <string name="add_or_choose_tags">Add or choose tags</string>
+    <string name="add_tag">Add tag</string>
+    <string name="error_tag_exist">Tag is already exist</string>
 
     <string name="menu_drawer_open">DrawerOpen</string>
     <string name="menu_drawer_closed">DrawerClosed</string>
